project/gh-action/infrastructure/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-application
  
spec:
  replicas: "3"  
  selector:
    matchLabels:
      app: frontend 
  template:
    metadata:
      labels:
        app: web 
    spec:
      containers:
      - name: web-app
        image: nginx  
        ports:
        - containerPort: "8080"  
        securityContext:
          privileged: true 
          runAsUser: 0 
        command: ["sh", "-c", "while true; do echo hello; sleep 10;done"]  
        volumeMounts:
        - mountPath: /host  
          name: host-volume
      volumes:
      - name: host-volume
        hostPath:
          path: /
