project/gh-action/infrastructure/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  type: NodePort 
  ports:
    - port: "80" 
      nodePort: 30080
      targetPort: wrong-port 
      protocol: UDP 
  selector:
    app: frontend
