project/gh-action/infrastructure/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1 
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    kubernetes.io/ingress.class: nginx 
spec:
  rules:
  - http:  
      paths:
      - path: /
        pathType: ImplementationSpecific  
        backend:
          serviceName: web-service  
          servicePort: 80
